# fastcws

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
ci/: brew-llvm.toolchain.cmake  build-darwin.sh  build-ubuntu.sh  build-win.bat
examples/: CMakeLists.txt  custom_dict_and_model.c  word_break.c
include/: fastcws.hpp  fastcws_defaults.hpp
include/fastcws/: aho_corasick.hpp  error.hpp  fastcws.hpp  freq_dict.hpp  hmm.hpp  sentence_split.hpp  suspendable_region.hpp  word_dag.hpp
include/fastcws/aho_corasick/: double_array_trie.hpp  trie.hpp
include/fastcws/bindings/: containers.hpp
include/fastcws/error/: error_code.hpp  exception.hpp
include/fastcws/freq_dict/: dict.hpp  io.hpp
include/fastcws/hmm/: hmm.hpp  normalizer.hpp  viterbi.hpp  wseg_4tag.hpp
include/fastcws/misc/: log2.hpp  rune_hopper.hpp  special_hopper.hpp
include/fastcws/rep_aware/: string_view.hpp  unique_ptr.hpp
include/fastcws/sentence_split/: dict.hpp  tokenizer.hpp
include/fastcws/suspendable_region/: allocator.hpp  basic_region.hpp  control_block.hpp  managed_region.hpp  offset_ptr.hpp  pinned_instance.hpp  seats.hpp
include/fastcws/word_dag/: dag.hpp  kahn.hpp
include/fastcws_defaults/: compressor.hpp  defaults.hpp  definitions.hpp  freq_dict.hpp  hmm_model.hpp  imemstream.hpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  libfastcws.cpp  libfastcws.h
src/libfastcws_defaults/: CMakeLists.txt  freq_dict.cpp  hmm_model.cpp
src/tools/: CMakeLists.txt  fastcws.cpp  hmm_train.cpp  snapshot_utils.cpp
tests/: CMakeLists.txt  test_aho_corasick.cpp  test_dict.cpp  test_string_view.cpp  test_suspendable_region.cpp  test_unique_ptr.cpp  test_word_dag.cpp
